changing url from localhost to lahaus.herokuapp in login and index html files

--- a/app/views/front_views/index.html.erb
+++ b/app/views/front_views/index.html.erb
@@ -235,7 +235,7 @@ $(function () {
     alert(userId);
     window.location.href = 'login.html';
   }
-  const url = 'http://localhost:3000/api/v1/users/' + userId + '/properties';
+  const url = 'http://lahaus.herokuapp.com/api/v1/users/' + userId + '/properties';
   $('.title').text('Panel de Administración');
   $.ajax({
     url: url,
