--- a/app/views/front_views/login.html.erb
+++ b/app/views/front_views/login.html.erb
@@ -195,7 +195,7 @@
           </div>
         </div>
   <script>
-  const url = 'http://localhost:3000/api/v1/login';
+  const url = 'http://lahaus.herokuapp.com/api/v1/login';
   const $ = window.$;
   $(function () {
     $('#login-btn').click(function (e) {
